[options]
use_scm_version = True
python_requires = >=3.7
package_dir =
  = .
packages =
    moatbus
    moatbus.server
include_package_data = True
zip_safe = True
install_requires =
    setuptools>=39.0

[options.package_data]
* = embedded
# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

[flake8]
show-source = True
max-line-length = 99
ignore = W503,F405,E203,E402
exclude = .eggs,.git,dist,.cache,__pycache__

