[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools", "wheel",]

[project]
classifiers = [
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Framework :: AsyncIO",
	"Framework :: Trio",
	"Framework :: AnyIO",
	"Development Status :: 4 - Beta",
	]
dependencies = [
	"anyio ~= 4.0",
	"cadquery ~= 2.0",
	]
version = "0.3.2"
keywords = [ "MoaT",]
requires-python = ">=3.10"
name = "moat-cad"
description = "CAD files for various MoaT-related things"
readme = "README.md"
license-files = ["LICENSE.txt"]
[[project.authors]]
email = "matthias@urlichs.de"
name = "Matthias Urlichs"


[project.urls]
homepage = "https://m-o-a-t.org"
repository = "https://github.com/M-o-a-T/moat"

[tool.flake8]
max-line-length = 99
ignore = [ "F841", "F401", "E731", "E502", "E402", "E127", "E123", "W503", "E231", "E203", "E501" ]

[tool.isort]
line_length = 99
multi_line_output = 3
profile = "black"

[tool.setuptools]
[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]

[tool.black]
line-length = 99

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py310,check

[testenv]
setenv = 
    PYTHONPATH = {env:PYTHONPATH}{:}{toxinidir}
deps = 
    anyio
    trio
    pytest
commands = 
    python3 -mpytest tests/

[testenv:check]
commands = 
    pylint moat tests
    flake8p moat tests
    black --check moat tests
deps = 
    pytest
    pylint
    black
    flake8-pyproject
    flake8

"""

[tool.pylint]
[tool.pylint.messages_control]
disable = "wrong-import-order,ungrouped-imports,too-many-nested-blocks,use-dict-literal,unspecified-encoding,too-many-statements,too-many-return-statements,too-many-locals,too-many-instance-attributes,too-many-branches,too-many-arguments,too-few-public-methods,superfluous-parens,no-else-return,no-else-continue,invalid-name,fixme"

[tool.ruff]
select = ["ALL"]
ignore = ["ANN","PTH","PERF", "D105", "D107","A003","S101","RUF001","RUF002","PLW1514", "D2","D3","D4","T2","FBT","TRY003","EM10","PLR","C","RET50","TD","FIX","N","ERA","BLE001","COM812","ISC001"]

preview = true
explicit-preview-rules = true

line-length = 99

[tool.ruff.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.flake8-builtins]
builtins-ignorelist = ["id","help"]

[tool.ruff.isort]
no-lines-before = ["future"]
required-imports = ["from __future__ import annotations"]
section-order = ["future","standard-library","first-party","third-party","moat","local-folder","upy","typing"]
extra-standard-library = ["pytest", "anyio"]
force-to-top = ["moat.util"]

[tool.ruff.isort.sections]
"moat" = ["moat"]
"upy" = ["micropython", "machine", "esp"]
"typing" = ["typing"]
