[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools", "wheel",]

[project]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Information Technology",
	"Programming Language :: Python :: 3",
	"Topic :: Database",                                                                            
	"Topic :: Home Automation",
]
dependencies = [
	"moat-kv ~= 0.70.24",
	"moat-util ~= 0.56.4",
]
version = "0.22.5"
keywords = [ "MoaT",]
requires-python = ">=3.8"
name = "moat-kv-inv"
description = "Inventory management for MoaT-KV"
readme = "README.rst"
license-files = ["LICENSE.txt"]

[[project.authors]]
email = "matthias@urlichs.de"
name = "Matthias Urlichs"

[project.urls]
homepage = "https://m-o-a-t.org"
repository = "https://github.com/M-o-a-T/moat"

[tool.flake8]
max-line-length = 99
ignore = [ "F841", "F401", "E731", "E502", "E402", "E127", "E123", "W503", "E231", "E203", "E501" ]

[tool.isort]
line_length = 99
multi_line_output = 3
profile = "black"

[tool.setuptools]
[tool.setuptools.packages]
find = {}
[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.black]
line-length = 99

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py310,check

[testenv]
setenv = 
    PYTHONPATH = {env:PYTHONPATH}{:}{toxinidir}
deps = 
    anyio
    asyncwebsockets
    asyncclick
    asyncscope
    trio
    pytest
commands = 
    python3 -mpytest tests/

[testenv:check]
commands = 
    pylint moat tests
    flake8p moat tests
    black --check moat tests
deps = 
    pytest
    pylint
    black
    flake8-pyproject
    flake8

"""

[tool.pytest]
filterwarnings = [
    "error",
    "ignore:unclosed:ResourceWarning",
]
addopts = "--verbose"

[tool.pylint]
[tool.pylint.messages_control]
disable = "wrong-import-order,ungrouped-imports,too-many-nested-blocks,use-dict-literal,unspecified-encoding,too-many-statements,too-many-return-statements,too-many-locals,too-many-instance-attributes,too-many-branches,too-many-arguments,too-few-public-methods,superfluous-parens,no-else-return,no-else-continue,invalid-name,fixme"

[tool.moat]
