[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools", "wheel",]

[project]
classifiers = [
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Framework :: AsyncIO",
	"Framework :: Trio",
	"Framework :: AnyIO",
	"Development Status :: 4 - Beta",
	]
dependencies = [
	"anyio ~= 4.2",
	"asyncclick",
	"attrs",
	"ruyaml",
	"simpleeval",
	"moat-util ~= 0.56.4",
	"moat-lib-cmd ~= 0.3.4",
	"moat-lib-codec ~= 0.4.1",
	"moat-link ~= 0.1.1",
	]
version = "0.1.0"
keywords = [ "MoaT",]
requires-python = ">=3.8"
name = "moat-link-server"
description = "Storage for messages between MoaT instances"
readme = "README.rst"
license-files = ["LICENSE.txt"]

[[project.authors]]
name = "Matthias Urlichs"
email = "matthias@urlichs.de"

[project.urls]
homepage = "https://m-o-a-t.org"
repository = "https://github.com/M-o-a-T/moat"

[tool.setuptools]
[tool.setuptools.packages]
find = {}
[tool.setuptools.package-data]
"*" = ["*.yaml"]
