[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools", "wheel",]

[project]
classifiers = [
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Framework :: AsyncIO",
	"Framework :: Trio",
	"Framework :: AnyIO",
	"Development Status :: 4 - Beta",
	]
dependencies = [
	"anyio ~= 4.0",
	"asyncscope",
	"moat-util ~= 0.56.4",
	]
version = "0.10.1"
keywords = [ "MoaT",]
requires-python = ">=3.10"
name = "moat"
description = "The command line for MoaT"
readme = "README.md"
license-files = ["LICENSE.txt"]

[[project.authors]]
email = "matthias@urlichs.de"
name = "Matthias Urlichs"

[project.scripts]
moat = "moat.main:cmd"

[project.urls]
homepage = "https://m-o-a-t.org"
repository = "https://github.com/M-o-a-T/moat"

[tool.setuptools]
[tool.setuptools.packages]
find = {}
[tool.setuptools.package-data]
"*" = ["*.yaml"]
