[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools", "wheel",]

[project]
classifiers = [
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Framework :: AsyncIO",
	"Framework :: Trio",
	"Framework :: AnyIO",
	"Development Status :: 4 - Beta",
	]
dependencies = [
	"anyio ~= 4.0",
	"cadquery ~= 2.0",
	]
version = "0.3.6"
keywords = [ "MoaT",]
requires-python = ">=3.10"
name = "moat-cad"
description = "CAD files for various MoaT-related things"
readme = "README.md"
[[project.authors]]
email = "matthias@urlichs.de"
name = "Matthias Urlichs"


[project.urls]
homepage = "https://m-o-a-t.org"
repository = "https://github.com/M-o-a-T/moat"

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]
