[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools", "wheel",]

[project]
classifiers = [
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Framework :: AsyncIO",
	"Framework :: Trio",
	"Framework :: AnyIO",
	"Development Status :: 4 - Beta",
	]
dependencies = [
	"moat-util ~= 0.60.9",
	"moat-db ~= 0.2.3",
	"moat-label ~= 0.2.2",
	]
version = "0.0.1"
keywords = [ "MoaT",]
requires-python = ">=3.11"
name = "moat-db-box"
description = "MoaT support for managing containers"
readme = "README.rst"
[[project.authors]]
name = "Matthias Urlichs"
email = "matthias@urlichs.de"


[project.urls]
homepage = "https://m-o-a-t.org"
repository = "https://github.com/M-o-a-T/moat"

[project.optional-dependencies]
event = [ "attr", "outcome",]
main = [ "asyncclick", "getpass",]
msg = [ "msgpack",]
path = [ "simpleeval",]
queue = [ "outcome",]
systemd = [ "systemd.daemon",]
yaml = [ "ruyaml",]
time = [ "calendar",]
dev = [ "flake8", "isort",]

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]
