[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools", "wheel",]

[project]
classifiers = [
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Framework :: AsyncIO",
	"Framework :: Trio",
	"Framework :: AnyIO",
	"Development Status :: 4 - Beta",
	]
dependencies = [
	"anyio ~= 4.2",
	"asyncclick",
	"attrs",
	"msgpack",
	"moat-util ~= 0.60.9",
	"moat-db ~= 0.2.3",
	"moat-label ~= 0.2.2",
	"moat-box ~= 0.2.2",
	]
version = "0.0.1"
keywords = [ "MoaT",]
requires-python = ">=3.8"
name = "moat-db-thing"
description = "MoaT support for storing info about things"
readme = "README.rst"

[[project.authors]]
name = "Matthias Urlichs"
email = "matthias@urlichs.de"

[project.urls]
homepage = "https://m-o-a-t.org"
repository = "https://github.com/M-o-a-T/moat"

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]
