[build-system]
requires = [
  "wheel",
  "setuptools >= 42",
]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AnyIO",
    "Framework :: Trio",
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
]
dependencies = [
  "anyio ~= 4.2",
  "msgpack",
  "serialpacker",
  "pyfuse3",
  "moat-util ~= 0.61.1",
  "moat-micro ~= 0.17.5",
  "moat-lib-config ~= 0.1.0",
  "moat-lib-micro ~= 0.1.0",
  "moat-lib-proxy ~= 0.1.0",
  "moat-lib-run ~= 0.1.0",
]
keywords = ["MoaT"]
requires-python = ">=3.8"
name = "moat-ems-battery"
authors = [{email = "matthias@urlichs.de",name = "Matthias Urlichs"}]
description = "REPLACE ME"
readme = "README.rst"
version = "0.2.18"

[project.urls]
homepage = "https://m-o-a-t.org"
repository = "https://github.com/M-o-a-T/moat"

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]
