[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools", "wheel",]

[project]
classifiers = [
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Framework :: AsyncIO",
	"Framework :: Trio",
	"Framework :: AnyIO",
	"Development Status :: 4 - Beta",
]
dependencies = [
	"anyio ~= 4.2",
	"moat-util ~= 0.61.1",
	"ortools ~= 8.2",
	"moat-lib-config ~= 0.1.0",
	"moat-lib-run ~= 0.1.0",
]
version = "0.2.15"
keywords = [ "MoaT",]
requires-python = ">=3.8"
name = "moat-ems-sched"
description = "A battery scheduler"
readme = "README.md"

[[project.authors]]
email = "matthias@urlichs.de"
name = "Matthias Urlichs"

[project.urls]
homepage = "https://m-o-a-t.org"
repository = "https://github.com/M-o-a-T/moat"

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]
