[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools", "wheel",]

[project]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Information Technology",
	"Programming Language :: Python :: 3",
	"Topic :: Database",
	"Topic :: Home Automation",
]
dependencies = [
	"moat-kv ~= 0.70.24",
	"asyncakumuli ~= 0.6.4",
]
version = "0.8.8"
keywords = [ "MoaT",]
requires-python = ">=3.8"
name = "moat-kv-akumuli"
description = "Akumuli storage connector for MoaT-KV"
readme = "README.rst"

[[project.authors]]
email = "matthias@urlichs.de"
name = "Matthias Urlichs"

[project.urls]
homepage = "https://m-o-a-t.org"
repository = "https://github.com/M-o-a-T/moat"

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]
