[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools", "wheel",]

[project]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Information Technology",
	"Programming Language :: Python :: 3",
	"Topic :: Database",
	"Topic :: Home Automation",
]
dependencies = [
	"moat-kv ~= 0.71.20",
	"moat-util ~= 0.61.1",
        "aiocaldav",
        "moat-lib-config ~= 0.1.0",
]
version = "0.1.8"
keywords = [ "MoaT",]
requires-python = ">=3.8"
name = "moat-kv-cal"
description = "Calendar management for MoaT-KV"
readme = "README.rst"

[[project.authors]]
email = "matthias@urlichs.de"
name = "Matthias Urlichs"

[project.urls]
homepage = "https://m-o-a-t.org"
repository = "https://github.com/M-o-a-T/moat"

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]
