[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools", "wheel",]

[project]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Information Technology",
	"Programming Language :: Python :: 3",
	"Topic :: Database",
	"Topic :: Home Automation",
]
dependencies = [
	"moat-kv ~= 0.70.2",
        "netifaces",
]
keywords = [ "MoaT",]
requires-python = ">=3.8"
name = "moat-kv-knx"
description = "1wire connector for MoaT-KV"
readme = "README.rst"
version = "0.12.3"
[[project.authors]]
email = "matthias@urlichs.de"
name = "Matthias Urlichs"

[project.urls]
homepage = "https://m-o-a-t.org"
repository = "https://github.com/M-o-a-T/moat"

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.pytest]
filterwarnings = [
    "error",
    "ignore:unclosed:ResourceWarning",
]
addopts = "--verbose"

[tool.pylint]
[tool.pylint.messages_control]
disable = "wrong-import-order,ungrouped-imports,too-many-nested-blocks,use-dict-literal,unspecified-encoding,too-many-statements,too-many-return-statements,too-many-locals,too-many-instance-attributes,too-many-branches,too-many-arguments,too-few-public-methods,superfluous-parens,no-else-return,no-else-continue,invalid-name,fixme"

[tool.moat]
